--- a/Guest Book.html
+++ b/Guest Book.html
@@ -43,7 +43,7 @@
 	<!-- about -->
 	<section class="about">
 		<div class="container">
-			<h3>Pendaftaran</h3>
+			<h3>Pendaftaran Online</h3>
 		</div>
 	</section>
   <fieldset style="width: 35%; margin: auto;">
